# Chr3D

./: .conda-forge.yml  .gitignore  =4.62.0  CONDA_PACKAGING.md  LICENSE  README.md  chr3d_command_reference.md  install.sh  make_all_figures.py  pyproject.toml
assets/: mermaid_graph.mdx
conda-recipe/: meta.yaml
docs/: API_REFERENCE.md  CHANGELOG.md  INSTALLATION.md  QUICKSTART.md  README.md  next.config.mjs  package.json  pnpm-lock.yaml
docs/.next/dev/: build-manifest.json  prerender-manifest.json  trace
docs/.next/dev/cache/: config.json
docs/.next/dev/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
docs/.next/dev/server/chunks/: 2443f_next_dist_0668e140._.js  2443f_next_dist_0668e140._.js.map  2443f_next_dist_compiled_f765f69e._.js  2443f_next_dist_compiled_f765f69e._.js.map  80097_@orama_orama_dist_esm_b59684d4._.js  80097_@orama_orama_dist_esm_b59684d4._.js.map  [root-of-the-server]__6c03f671._.js  (+44 more)
docs/.source/: browser.ts  server.ts
docs/app/: global.css  layout.tsx
docs/app/(home)/: page.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/layout/sidebar/: base.tsx
docs/components/toc/: clerk.tsx  default.tsx
docs/components/ui/: background-beams.tsx
docs/content/docs/: benchmarks.mdx  comparison.mdx  faq.mdx
docs/content/docs/api/: chiapet.mdx  hic.mdx  hichip.mdx  index.mdx  meta.json  utils.mdx
docs/content/docs/cli/: chiapet.mdx  hic.mdx  hichip.mdx  index.mdx  meta.json
docs/content/docs/getting-started/: concepts.mdx  index.mdx  installation.mdx  quickstart.mdx
docs/content/docs/guides/: loop-calling.mdx  matrix-generation.mdx  meta.json  quality-control.mdx  restriction-fragments.mdx
docs/content/docs/tutorials/: chiapet-tutorial.mdx  hic-api.mdx  hic-cli.mdx  hic-tutorial.mdx  hichip-api.mdx  hichip-cli.mdx  hichip-tutorial.mdx  index.mdx  meta.json
docs/docs/content/api/: _meta.js  bulk-hic.mdx  cli.mdx  index.mdx  peak-based.mdx  sn-hic.mdx  utils.mdx
docs/notes/: pre_file_tree.mdx
examples/cli/: chiapet_pipeline.sh  hic_pipeline.sh  hichip_pipeline.sh  snhic_pipeline.sh
examples/notebook/: HiGlass.ipynb  background_model.ipynb  chiapet_pipeline.ipynb  clustering.ipynb  hic_pipeline.ipynb  hichip_pipeline.ipynb  snhic_pipeline.ipynb
recipe/: bld.bat  build.sh  meta.yaml
scripts/: run_linker_filtering_example.sh
src/chr3d/: __init__.py  bulk_hic.py  cli.py  hichip_purifying.py  linker_filtering_v3.py  mapping_v2.py  mapping_v3.py  peak_calling.py  pet_categorization.py  qc_report.py  restriction_sites.py
src/chr3d/hic/: __init__.py  bulk_hic.py  loop_calling.py  sn_hic.py  tads.py
src/chr3d/hic/clustering/: __init__.py  gnn_clustering.py  gnn_clustering_BACKUP.py  pca_sweep.py  preprocessing.py
src/chr3d/peak_based/: __init__.py  chiapet_pipeline.py  hichip_pipline.py  linker_filtering.py  mapping.py  peak_calling.py  purifying.py
src/chr3d/peak_based/background_model/: __init__.py  apply_fdr_correction.py  background_sampling_phase1.py  background_sampling_phase2.py  classify_pets.py  extract_templates.py
src/chr3d/utils/: __init__.py  chiapet_qc_report.py  detect_restriction_enzyme.py  logging.py  loops_to_beddb.py  qc_report.py  restriction_sites.py  system_info.py
src/rowan_pet/: __init__.py  chiapet_purifying.py  cli.py  loop_calling.py  loop_older_approach.py  mapping_v2.py  peak_calling.py  pet_categorization.py
updates/: peak_calling_changes.mdx  reviewer_concerns_analysis.md
(+330 files in other folders)
